--- a/Sesion 7/estilo.css
+++ b/Sesion 7/estilo.css
@@ -2,13 +2,13 @@
 
 #banner {
     text-align: center;
-    width: 100%;
+    width: 120%;
 
 }
 
 #letra {
     float: inline-start;
-
+    width: 5px;
 }
 
 #negro{
