--- a/10/main.css
+++ b/10/main.css
@@ -1,21 +1,69 @@
 
 
-header{
-    background-color: rgb(239, 156, 170);
+section{
+    
+}
+
+.flex-contain{
+    display: flex;
+    justify-content:center;
+    flex-direction:column;
+}
+
+#cabeza{
+
+    text-align: center;
+    font-size: xx-large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgb(241, 114, 144);
+    padding-top: 100px;
 
 }
 
+.piedras{
+    
+    text-align: center;
+}
 
-section{
-    background-color: pink;
+
+.pepe{
+    padding-top: 50px;
+    padding-bottom: 15px;
+    text-align: center;
+    color: rgb(241, 114, 144);;
+
+}
+
+.manolo{
+    text-align: center;
+    padding-right: 100px;
+    padding-left: 100px;
+    font-size: medium;
+    color: rgb(161, 157, 159);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 1.8;
+}
+
+#sub{
+    text-align: center;
+    font-size:small;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(161, 157, 159);
+    padding-bottom: 100px;
+
+    
 }
 
 img{
-    width: 33%;
+    width: 20vw;
     height: auto;
     filter: opacity(30%);
     clip-path: fill-box;
+    padding-top: 15px;
+    padding-bottom: 15px;
+   
 }
+
 
 a:hover img{
     filter: saturate(1);
