--- a/16/main.css
+++ b/16/main.css
@@ -1,31 +1,76 @@
+.flex-contain {
+    display: flex;
+
+    flex-direction: row;
+}
 
 
 
-.t1{
+
+.uno {
+    width: 30vw;
+    padding-right: 5vw;
+}
+
+.cabeza{
+    
+}
+
+.tipo{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-right: 5vw;
+}
+
+.t1 {
     font-family: "1";
 }
 
-.t2{
+.t2 {
     font-family: "2";
 }
 
-.t3{
+.t3 {
     font-family: "3";
 }
 
-.t4{
+.t4 {
     font-family: "4";
 }
 
-.t5{
+.t5 {
     font-family: "5";
 }
 
-.t6{
+.t6 {
     font-family: "6";
 }
 
 @font-face {
     font-family: "1";
     src: url(fuentes/DaysOne-Regular.ttf);
+}
+
+@font-face {
+    font-family: "2";
+    src: url(fuentes/LondrinaShadow-Regular.ttf);
+}
+
+@font-face {
+    font-family: "3";
+    src: url(fuentes/Nabla-Regular-VariableFont_EDPT\,EHLT.ttf);
+}
+
+@font-face {
+    font-family: "4";
+    src: url(fuentes/NewRocker-Regular.ttf);
+}
+
+@font-face {
+    font-family: "5";
+    src: url(fuentes/Offside-Regular.ttf);
+}
+
+@font-face {
+    font-family: "6";
+    src: url(fuentes/RubikMicrobe-Regular.ttf);
 }
