--- a/10/main.css
+++ b/10/main.css
@@ -6,10 +6,15 @@ body{
     margin-bottom: 100px;
 }
 
+
+section{
+    justify-content: right;
+}
+
 .flex-contain{
     display: flex;
     justify-content:center;
-    flex-direction:column;
+    flex-direction:row;
 }
 
 #cabeza{
