--- a/Memoria/main.css
+++ b/Memoria/main.css
@@ -90,7 +90,7 @@ body{
 
 .espacios{
     height: 10vh;
-    background-color: palevioletred;
+    background-color: rgb(242, 155, 155);
 }
 
 .luli{
